[ezmorph] updated javadocs and minor enhancements